[gd_scene load_steps=38 format=3 uid="uid://b4mo58de1neb4"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_a08c1"]
[ext_resource type="PackedScene" uid="uid://nwnx6dwitids" path="res://assets/BuildingsExt/DownTown/general_shop_1.glb" id="2_aufub"]
[ext_resource type="PackedScene" uid="uid://5p08x2tqhp80" path="res://assets/BuildingsExt/DownTown/general_shop_3.glb" id="3_abjac"]
[ext_resource type="PackedScene" uid="uid://0l3usfm35a03" path="res://assets/BuildingsExt/DownTown/general_shop_2.glb" id="4_r4snq"]
[ext_resource type="PackedScene" uid="uid://bn1dra8xnme4i" path="res://assets/BuildingsExt/DownTown/Theatre_House_removed_pieces.glb" id="5_ceroa"]
[ext_resource type="PackedScene" uid="uid://cqgirsa7mug4d" path="res://assets/BuildingsExt/DownTown/court_house.glb" id="6_xwefr"]
[ext_resource type="PackedScene" uid="uid://rarrxqf7pv72" path="res://assets/BuildingsExt/DownTown/PostOfficeModel.glb" id="7_mx3pi"]
[ext_resource type="PackedScene" uid="uid://bx2kquon27evp" path="res://assets/BuildingsExt/DownTown/hotel_05_28_24_linked_to_town_exterior.glb" id="8_g485v"]
[ext_resource type="PackedScene" uid="uid://pq77nrud3d6o" path="res://assets/BuildingsExt/Grocery/GroceryStore_complex_no_collision.glb" id="9_tcib5"]
[ext_resource type="PackedScene" uid="uid://cvmu18coc7u7c" path="res://assets/BuildingsExt/Grocery/motel_removed_piecesblend.glb" id="10_ptg5e"]
[ext_resource type="PackedScene" uid="uid://b7lbv8pbps7v1" path="res://assets/BuildingsExt/DownTown/gas_station_1.glb" id="11_00lcj"]
[ext_resource type="PackedScene" uid="uid://duqmq5dixu2oy" path="res://assets/BuildingsExt/Residents/BigHouseRemovedPieces.glb" id="12_8si5w"]
[ext_resource type="PackedScene" uid="uid://dr64k17qornuk" path="res://assets/BuildingsExt/Residents/MediumHouse.glb" id="13_2dmks"]
[ext_resource type="PackedScene" uid="uid://r3r4f4861cle" path="res://assets/BuildingsExt/Residents/trailer_house_1.glb" id="14_87xdf"]
[ext_resource type="PackedScene" uid="uid://cyqr1gweunixi" path="res://assets/BuildingsExt/Residents/trailer_house_2.glb" id="15_y0q56"]
[ext_resource type="PackedScene" uid="uid://b2wcijdhj3uvx" path="res://assets/BuildingsExt/PowerPlant/PowerPlant.glb" id="16_f1elq"]
[ext_resource type="PackedScene" uid="uid://bg5frntbe6e8b" path="res://assets/BuildingsExt/School/school.glb" id="17_7cxw3"]
[ext_resource type="PackedScene" uid="uid://c8g8briqm1qee" path="res://assets/BuildingsExt/Lab/LabFinal.glb" id="18_tmfqr"]
[ext_resource type="PackedScene" uid="uid://c86eijf03jm1p" path="res://assets/Geography/Town_Geo_No_Buildings.glb" id="19_ujqe6"]
[ext_resource type="Texture2D" uid="uid://bhs1un2ry5mk0" path="res://assets/sky_draft_1.png" id="20_u8nd4"]
[ext_resource type="PackedScene" uid="uid://b5srie1k5oyfm" path="res://player.tscn" id="21_4q6k6"]
[ext_resource type="Script" path="res://inventory/inventory_interface.gd" id="21_icb5f"]
[ext_resource type="Resource" uid="uid://ncjfjmrktct1" path="res://text_inv.tres" id="22_hph0q"]
[ext_resource type="PackedScene" uid="uid://bmbxq4mgofix2" path="res://inventory/inventory.tscn" id="22_mdipm"]
[ext_resource type="PackedScene" uid="uid://dg36vp5juvdv2" path="res://inventory/slot.tscn" id="25_sqt1s"]
[ext_resource type="PackedScene" uid="uid://bg7mhq8niuedd" path="res://interactable/chest.tscn" id="26_bf662"]
[ext_resource type="Script" path="res://inventory/inventory_data.gd" id="27_nvd02"]
[ext_resource type="Resource" uid="uid://sb245rbgw657" path="res://item/items/blue_book.tres" id="28_q56d0"]
[ext_resource type="Script" path="res://inventory/slot_data.gd" id="29_a8xmc"]
[ext_resource type="PackedScene" uid="uid://cvxn6kp8jrfnf" path="res://item/pick_up/pick_up.tscn" id="30_ppoir"]
[ext_resource type="Resource" uid="uid://cavmh7t8ib2kv" path="res://item/items/apple.tres" id="31_v1ut6"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_hwhsh"]
panorama = ExtResource("20_u8nd4")

[sub_resource type="Sky" id="Sky_5m1p6"]
sky_material = SubResource("PanoramaSkyMaterial_hwhsh")

[sub_resource type="Environment" id="Environment_uxyh3"]
background_mode = 2
sky = SubResource("Sky_5m1p6")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Resource" id="Resource_k6lh7"]
script = ExtResource("29_a8xmc")
item_data = ExtResource("28_q56d0")
quantity = 1

[sub_resource type="Resource" id="Resource_1rbgy"]
script = ExtResource("27_nvd02")
slot_datas = Array[ExtResource("29_a8xmc")]([SubResource("Resource_k6lh7"), null, null, null, null])

[sub_resource type="Resource" id="Resource_v5aln"]
script = ExtResource("29_a8xmc")
item_data = ExtResource("31_v1ut6")
quantity = 1

[node name="Main" type="Node"]
script = ExtResource("1_a08c1")

[node name="BuildingsExt" type="Node3D" parent="."]

[node name="DownTown" type="Node3D" parent="BuildingsExt"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 118.043, 0, 115.55)

[node name="general_shop_1" parent="BuildingsExt/DownTown" instance=ExtResource("2_aufub")]
transform = Transform3D(-6.55671e-08, 0, -1.5, 0, 1.5, 0, 1.5, 0, -6.55671e-08, 23.2881, 0, 3.97005)

[node name="general_shop_3" parent="BuildingsExt/DownTown" instance=ExtResource("3_abjac")]
transform = Transform3D(9.05975e-08, 0, 1.2, 0, 1.2, 0, -1.2, 0, 9.05975e-08, -5.12874, 0, 0)

[node name="general_shop_2" parent="BuildingsExt/DownTown" instance=ExtResource("4_r4snq")]
transform = Transform3D(-6.55671e-08, 0, -1.5, 0, 1.5, 0, 1.5, 0, -6.55671e-08, 23.1942, 0, 13.1893)

[node name="Theatre_House_removed_pieces" parent="BuildingsExt/DownTown" instance=ExtResource("5_ceroa")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.7946, 0, -7.71113)

[node name="court_house" parent="BuildingsExt/DownTown" instance=ExtResource("6_xwefr")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5, 0, -19)

[node name="PostOfficeModel" parent="BuildingsExt/DownTown" instance=ExtResource("7_mx3pi")]
transform = Transform3D(1.13247e-07, 0, -1.5, 0, 1.5, 0, 1.5, 0, 1.13247e-07, 23.3649, 0, 20.9185)

[node name="hotel_05_28_24_linked_to_town_exterior" parent="BuildingsExt/DownTown" instance=ExtResource("8_g485v")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 23.2718, 0, -24.4487)

[node name="Grocery" type="Node3D" parent="BuildingsExt"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 118.043, 0, 115.55)

[node name="GroceryStore_complex_no_collision" parent="BuildingsExt/Grocery" instance=ExtResource("9_tcib5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 19.993, 0.005, -139.833)

[node name="motel_removed_piecesblend" parent="BuildingsExt/Grocery" instance=ExtResource("10_ptg5e")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -30.776, 0.005, -111.532)

[node name="gas_station_1" parent="BuildingsExt/Grocery" instance=ExtResource("11_00lcj")]
transform = Transform3D(-6.55671e-08, 0, 1.5, 0, 1.5, 0, -1.5, 0, -6.55671e-08, -26.1904, 0.005, -57.0534)

[node name="Residents" type="Node3D" parent="BuildingsExt"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 118.043, 0, 115.55)

[node name="BigHouseRemovedPieces" parent="BuildingsExt/Residents" instance=ExtResource("12_8si5w")]
transform = Transform3D(-5.24537e-08, 0, 1.2, 0, 1.2, 0, -1.2, 0, -5.24537e-08, -54.2986, 0.00466001, -49.1996)

[node name="MediumHouse" parent="BuildingsExt/Residents" instance=ExtResource("13_2dmks")]
transform = Transform3D(-5.68248e-08, 0, 1.3, 0, 1.3, 0, -1.3, 0, -5.68248e-08, -34.71, 0, 2.186)

[node name="trailer_house_1" parent="BuildingsExt/Residents" instance=ExtResource("14_87xdf")]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, -66.104, -0.11121, 0)

[node name="trailer_house_2" parent="BuildingsExt/Residents" instance=ExtResource("15_y0q56")]
transform = Transform3D(-5.68248e-08, 0, -1.3, 0, 1.3, 0, 1.3, 0, -5.68248e-08, -59.8529, -0.000520349, -9)

[node name="PowerPlant" parent="BuildingsExt" instance=ExtResource("16_f1elq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.918, 0.005, 222.031)

[node name="school" parent="BuildingsExt" instance=ExtResource("17_7cxw3")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 69.9684, 0.0729849, -54.4187)

[node name="LabFinal" parent="BuildingsExt" instance=ExtResource("18_tmfqr")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -393.581, 38.5679, -83.8659)

[node name="Infrastructure" type="Node3D" parent="."]

[node name="Geography" type="Node3D" parent="."]
transform = Transform3D(7.88, 0, 0, 0, 7.88, 0, 0, 0, 7.88, 0, 12.07, 0)

[node name="town_geo" parent="Geography" instance=ExtResource("19_ujqe6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.922, -1.53154, 2.286)
skeleton = NodePath("../..")

[node name="Environment" type="Node3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 13.3494, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_uxyh3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.121862, -0.154537, -0.0356093, -0.153552, -0.126206, 0.0222204, -0.0396398, 0.0138004, -0.195546, 3.51963, 9.46669, -10.9961)
light_energy = 2.205
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.69
shadow_enabled = true
shadow_bias = 0.0
shadow_normal_bias = 1.486
sky_mode = 1

[node name="Specimans" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.07, 0)

[node name="Player" parent="." instance=ExtResource("21_4q6k6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.79738, 0, 0.877838)
inventory_data = ExtResource("22_hph0q")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("21_icb5f")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("22_mdipm")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("22_mdipm")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.546007
anchor_top = 0.339506
anchor_right = 0.575521
anchor_bottom = 0.391975
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("25_sqt1s")]
visible = false
modulate = Color(1, 1, 1, 0.521569)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 62.0
offset_top = 58.0
offset_right = 102.0
offset_bottom = 98.0

[node name="Chest" parent="." instance=ExtResource("26_bf662")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.74837, 0, -1.99096)
inventory_data = SubResource("Resource_1rbgy")

[node name="PickUp" parent="." instance=ExtResource("30_ppoir")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.39293, 1.37417, -1.99096)
slot_data = SubResource("Resource_v5aln")

[connection signal="drop_slot_data" from="UI/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
